deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: task2-deployment
spec:
  replicas: 3
  selector:
    matchLabels:
      app: task2-app
  template:
    metadata:
      labels:
        app: task2-app
    spec:
      containers:
        - name: task2
          image: developmarat/task1:v1
          ports:
            - name: web
              containerPort: 8000
          livenessProbe:
            httpGet:
              port: 8000
              path: /health
            initialDelaySeconds: 135
            periodSeconds: 5
            timeoutSeconds: 2
          readinessProbe:
            httpGet:
              port: 8000
              path: /health
            initialDelaySeconds: 30
            periodSeconds: 5
            failureThreshold: 20
