ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: task2-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  rules:
  - host: arch.homework
    http:
      paths:
      - path: /otusapp($|/)(.*)
        backend:
          serviceName: task2-service
          servicePort: 9000
